# schema-validator

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pr-pipeline.yml  publish-package.yml
data/test-csv/: simple-books.csv
data/test-ddls/: simple-example-ddl-with-alter.sql  simple-example-ddl.sql
data/test-ddls/medium-ddls/: larger-table.sql
data/test-ddls/simple-ddls/: simple-example-ddl-with-alter.sql  simple-example-ddl.sql
schema_validator/: __init__.py
schema_validator/ddl/: parse_ddl.py  schema_store.py
schema_validator/mapping/: pyspark_type_mapping.py
schema_validator/model/: alter_table_model.py  column_schema.py  table_schema.py
schema_validator/validator/: __init__.py  pyspark_validator.py  schema_validator.py
tests/ddl_tests/: parse_ddl_test.py
tests/e2e_tests/: pyspark_validation_test.py
tests/model_tests/: column_schema_test.py
tests/validator_tests/: pyspark_validator_test.py
